sandbox/output
Anagram.java:6: error: illegal start of expression
        return Arrays.asList({string});
                             ^
Anagram.java:6: error: ';' expected
        return Arrays.asList({string});
                              ^
Anagram.java:6: error: illegal start of type
        return Arrays.asList({string});
                                     ^
Anagram.java:8: error: class, interface, or enum expected
}
^
4 errors
